# src/main/java/br/com/robson/robssohex/interactors/model/CreateUserCmd.java
@@ -1,0 +1,4 @@
+package br.com.robson.robssohex.interactors.model;
+
+import java.time.LocalDate;
+public record CreateUserCmd(String username, String email, String rawPassword, LocalDate dateOfBirth) {}
