# src/main/java/br/com/robson/robssohex/interactors/model/UserModel.java
@@ -1,0 +1,14 @@
+package br.com.robson.robssohex.interactors.model;
+
+import java.time.Instant;
+import java.time.LocalDate;
+import java.util.UUID;
+
+public record UserModel(
+        UUID id,
+        String username,
+        String email,
+        LocalDate dateOfBirth,
+        boolean enabled,
+        Instant createdAt,
+        Instant updatedAt) {}
